--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "^0.19.10"
   },
@@ -31,6 +32,7 @@
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.2"
   },
   "engines": {
