--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native-stack": "^6.9.17",
+    "clsx": "^2.1.0",
     "expo": "~49.0.15",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.30.1",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
+    "nativewind": "4.0.1",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.72.10",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.2"
   },
   "engines": {
