--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native-stack": "^6.9.17",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.10",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-sqlite-storage": "^6.0.1",
