--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/react-native-skia": "~0.1.196",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
@@ -23,12 +24,15 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "victory-native": "^40.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
