--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "phone": "expo start --dev-client"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -17,8 +18,10 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.13",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "moment": "^2.30.1",
     "nativewind": "4.0.1",
     "react": "^18.2.0",
@@ -27,7 +30,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.1",
@@ -36,11 +40,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
     "typescript": "^5.3.2"
   },
   "engines": {
