--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native-stack": "^6.9.17",
     "@shopify/react-native-skia": "~0.1.196",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.10",
+    "react-native-calendar-picker": "^8.0.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
