--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native-stack": "^6.9.17",
@@ -19,7 +20,9 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
+    "expo-asset": "~8.10.1",
     "expo-dev-client": "~2.4.13",
+    "expo-file-system": "~15.4.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
@@ -29,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.72.10",
     "react-native-calendar-picker": "^8.0.2",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
