--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "phone": "expo start --dev-client"
+    "phone": "expo start --dev-client",
+    "eas-build-post-install": "tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css.native.css"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -19,7 +20,7 @@
     "@types/react-native-calendar-picker": "^8.0.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
-    "expo": "~49.0.15",
+    "expo": "^49.0.0",
     "expo-asset": "~8.10.1",
     "expo-dev-client": "~2.4.13",
     "expo-file-system": "~15.4.5",
